--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,70 @@
+/* Reset styles */
+body, h1, h2, h3, p, ul, ol {
+  margin: 0;
+  padding: 0;
+}
+
+/* Global styles */
+body {
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  color: #BCBFC6;
+  background-color: #242831;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+/* Header styles */
+header {
+  padding: 10px 0;
+  background-color: #333743; /* Dark mode background color */
+  color: #A09FA5; /* Dark mode text color */
+}
+
+/* Navigation styles */
+nav {
+  padding: 10px 0;
+  text-align: center;
+  background-color: #5A6988; /* Dark mode background color */
+}
+
+nav a {
+  text-decoration: none;
+  padding: 10px;
+  margin: 0 5px;
+  display: inline-flex;
+  color: #BCBFC6; /* Dark mode text color */
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+/* Main content styles */
+section {
+  margin: 20px 0;
+  background-color: #242831; /* Dark mode background color */
+  color: #BCBFC6; /* Dark mode text color */
+}
+
+article {
+  padding: 20px;
+  margin-bottom: 20px;
+  border: 1px solid #333743; /* Dark mode border color */
+  background-color: #242831; /* Dark mode background color */
+}
+
+/* Footer styles */
+footer {
+  padding: 10px 0;
+  background-color: #333743; /* Dark mode background color */
+  color: #BCBFC6; /* Dark mode text color */
+}
+
+/* Additional styles */
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -11,25 +78,27 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
   from {
-    transform: rotate(0deg);
+      transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+      transform: rotate(360deg);
   }
 }
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+      animation: logo-spin infinite 20s linear;
   }
 }
 
